--- a/index.html
+++ b/index.html
@@ -488,5 +488,163 @@
 کسایی که استعداد و توانایی‌های آدم رو باور نداشته باشن، در مقابل آدم‌هایی که "خلیفه الله" بودن رو تا حد زیادی بالفعل کردن،  دو جور رفتار میکنن: ۱- میگن این امکان نداره و این فرد حرفاش دروغه یا کارهاش شعبده بازیه ۲- میگن این فرد از آدمیزاد نیست و "از جنس خداست" ("پسر خدا"ست). نکته مشترک هر دو دیدگاه این هست که " آدم نمیتونه به چنین مقامی برسه".</p>
   </section>
 
+  <section>
+    <h2>ولی ۱</h2>
+    <p>به نظرم اگر بررسی کنیم، همون‌طور که در یکی از پیام‌های قبلیم هم عرض کردم، یه تفاوتِ پایه‌ای بین کسانی که زیر بار ولایت اولیای الهی نمی‌رن و دیگران هست، و اون اینه که اون‌ها اصلاً شأن زیادی برای آدم قائل نیستن؛ حالا مستقل از این‌که اون فرد کی باشه. اصلا آدم نمیتونه خیلی درجه بالایی داشته باشه. نه اینکه صرفا با یک فرد خاص مسئله داشته باشن.
+
+عبارت ﴿وَعَلَّمَ آدَمَ الْأَسْمَاءَ كُلَّهَا﴾ رو ساده می‌گیرن. در حالی که «علَّم» که بعدش در هنگام عرضه بر ملائکه فرمود: ﴿يَا آدَمُ أَنْبِئْهُم بِأَسْمَائِهِمْ﴾، «أنبئهم» یعنی خبری بهشون بده، نه این‌که «علِّمهم» (چه بسا داره می‌گه اصلاً اون‌ها توانایی این یادگیری رو نداشتن). و این‌که جمله‌ی ﴿إِنِّي جَاعِلٌ فِي الْأَرْضِ خَلِيفَةً﴾، جمله‌ی اسمیه‌ست که خداوند با ضمیر مفرد درباره‌ی خودش داره صحبت می‌کنه. مقایسه بفرمایید با آیه‌ی مشابه در سوره‌ی ص: ﴿يَا دَاوُودُ إِنَّا جَعَلْنَاكَ خَلِيفَةً فِي الْأَرْضِ﴾ که جمله با فعل هست و ضمیر «إِنَّا» و «نا» داره. و این عبارت همون اولِ مصحف قرآن بیان شده که هر کسی بفهمه این هدایت برای چه قابلیت و استعدادی فرستاده شده و با تقوای الهی (که در همین مجموعه آیات، کمی قبل‌تر بهش پرداخته) این قابلیت (اسماء الهی) رو در درون خودش متجلی کنه.
+
+حالا اگر یکی از بنی‌آدم به خداوند نزدیک و نزدیک‌تر شد، بیشتر و بیشتر تجلی اسماء خداوند شد، از جمله اسم "الهادي" خدا در او خیلی متجلی شد، حالا کسی که واقعا خداخواهه، خدادوسته نسبت به او چه حسی داره و چه موضعی می‌گیره؟
+
+به نظرم زیر بار اولیای الهی نرفتن، یعنی این‌که یک آدمی نپذیره که آدم دیگری از او به خدا مقرب‌تره، ارجمندتره و...، دو تا ریشه می‌تونه داشته باشه:
+۱. یکی ریشه‌ی ظاهرگرایی که می‌گه: «همه‌ی ما عین همیم، همه "یأکلون الطعام" و "یمشون فی الأسواق"». من کس خاصی نیستم، بقیه هم کس خاصی نیستن. در صورتی که میدونیم باطن همین آدمایی که غذا میخورن و توی بازارها راه میرن میتونه از زمین تا آسمان با هم فرق داشته باشه :"وَلَلْآخِرَةُ أَكْبَرُ دَرَجَاتٍ وَأَكْبَرُ تَفْضِيلًا".
+
+۲. یکی دیگه هم همون زیر بار آدم نرفتن ابلیس. یعنی کلاً نمی‌تونه بپذیره کسی از خودش جلوتر باشه، مشکل صرفاً با فردش نیست.
+
+و این برتری سیب و پرتقال نسبت به هم نیست، که هر کدوم چیزی دارن که اون یکی نداره؛ یا حالا شاید من حیث المجموع هم بتونیم یه برتری مختصری برای یکیشون قائل بشیم. این برتری واقعی هست. وقتی ملائکه به یکی سجده کردن، یعقوب به یکی سجده کرد، من چه عددی هستم؟!
+
+
+پ.ن.۱: به نظرم همون‌طور که آقای دکتر اشاره کردن به مقایسه نحوه‌ی بیان داستان یک پیامبر در سوره‌های مختلف، مقایسه‌ی عبارت‌های شبیه به هم هم می‌تونه اون‌ها رو برای ما روشن‌تر کنه. مثل همین دو عبارت خیلی شبیه به هم:
+• ﴿إِنِّي جَاعِلٌ فِي الْأَرْضِ خَلِيفَةً﴾
+• ﴿إِنَّا جَعَلْنَاكَ خَلِيفَةً فِي الْأَرْضِ﴾
+
+پ.ن.۲: کسی که خداشناسه میدونه که منابع خدا محدود نیست که بزرگی یکی جا رو برای دیگری تنگ کنه. خدا من رو هم به هرچی و هر درجه‌ای بخوام میتونه برسونه. بی‌نهایته؛ جا برای کسی تنگ نیست. وقتی حب خداوند در دلم شعله بکشه، یوسف رو هم خیلی شدید دوست دارم. انقدر که انگار کم‌کم خود یوسف میشم، حالا با شدت یوسف دوست‌دار خدا میشم. ولی کسی که خدانشناسه، مثل ابلیس و قابیل و برادران یوسف، فکر میکنه تا اون یکی انقدر عزیزه، سهم اونا کمتر میشه، سعی میکنه اونا رو خراب کنه.
+
+
+نکته مهم: اشتباه برداشت نشه خدای نکرده بنده اشاره‌ای به فرد خاصی ندارم. همه عبارات بالا صرفا بحث تئوریک هست. ارادتمند.</p>
+  </section>
+
+  <section>
+    <h2>ولی ۲</h2>
+    <p>عرض کردم اون ولی الهی تجلی اسم "الهادی" شده.
+
+و البته کلا هر چه فردی مقرب‌تر باشه، همه اسماء درش تجلی بیشتری دارن. با عبد و عبدتر شدن، این شیشه وجودش صیقلی و صیقلی‌تر شده ‌و اعوجاج کمتری در اون نور الهی ایجاد میکنه.
+
+علامه طباطبایی بحثی ذیل "جعلناهم ائمه یهدون بامرنا" دارن که این امر رو ربط میدن به امر "کن فیکون".
+</p>
+  </section>
+
+  <section>
+    <h2>ولی ۳</h2>
+    <p>اگر کسی برای اولیای الهی الوهیتی قائل هست اشتباه میکنه. ولی وقتی هم یکی میگه من الوهیت قائل نیستم، ما با خوشحالی میپذیریم 😊 من به بعضی رفقای مسیحی میگفتم، ما چه بسا مقامات بیشتری از شما برای حضرت مسیح قائلیم. این بساط خدایی و پسرخدایی و ... رو قبول نداریم. این حرفا درواقع کوچک کردن خداست، نه بزرگ کردن مسیح.
+
+راستش من شخصا راهی به باطن افراد ندارم. همینکه میگه من موحدم، ما میگیم، تشکر، خیلی خوشحال شدم 😊🙏
+
+دقیقا. هرکسی خودش میدونه چی کارس. حتی ممکنه سجده کنه به یکی دیگه و این اصلا از روی کمال توحیدش باشه.
+
+</p>
+  </section>
+
+  <section>
+    <h2>ولی ۴</h2>
+    <p>بعضی سوالات صورت ساده‌‌ای دارن ولی پاسخش یک زندگیه. در حد نهاییش (extremeش) این سوال که "توحید یعنی چی؟" میشه یک جواب اولیه داد که به سادگی به شدت شرک‌آلود میشه 🤯 ولی هرچی بیشتر و بیشتر بش بپردازیم، هی درک بهتری پیدا میکنیم.
+
+با این مقدمه، اول در مورد سوال دومتون عرض کنم که قسمت عمده‌ای از قرآن تنظیم رابطه ولایی بین آدم‌هاست. شاید اصلا چون مثل آب توی کل قرآن جاری هست، بعضی‌ وقتا به چشم نیاد. صرفا ریشه "و ل ی" رو در قرآن ملاحظه بفرمایید از "وَأُولُو الْأَرْحَامِ بَعْضُهُمْ أَوْلَىٰ بِبَعْضٍ فِي كِتَابِ اللَّهِ"، "لَا تَتَوَلَّوْا قَوْمًا غَضِبَ اللَّهُ عَلَيْهِمْ" و ... تا "النَّبِيُّ أَوْلَىٰ بِالْمُؤْمِنِينَ مِنْ أَنفُسِهِمْ" و "إِنَّمَا وَلِيُّكُمُ اللَّهُ وَرَسُولُهُ وَالَّذِينَ آمَنُوا الَّذِينَ يُقِيمُونَ الصَّلَاةَ وَيُؤْتُونَ الزَّكَاةَ وَهُمْ رَاكِعُونَ" و ... آدما باید یک ساختار ولایی خاصی با هم پیدا کنن. برای اینکه طولانی ننویسم جهت مثال به پستی که قبلا در اون عرایضی در مورد سوره مائده در این رابطه داشتم، در پست بعد اشاره خواهم کرد.
+
+و با این مقدمات به نظرم اینطور به سوال اولتون جواب بدم: تصور کنید که الآن حضرت عیسی (ع) حضور دارن. فکر کنیم که زندگی ما چه فرقی خواهد داشت؟ در رابطه با ایشون چه میکنیم؟ چقدر به ایشون مشغول میشیم؟ آیا اصلا به چیز دیگری غیر از خواست ایشون فکر میکنیم یا مشغول میشیم؟ چه خواسته‌‌هایی ازشون داریم؟ چه فرقی با حضور علامه طباطبایی برای ما دارن؟ در مرحله بعد چه فرقی با حضور حضرت شعیب (ع) برای ما دارن؟</p>
+  </section>
+
+  <section>
+    <h2>ولی ۵</h2>
+    <p>اینها عبارات زیبا و قابل استفاده‌ای هستند و احتمالا اگر چیزی بهتر از "لا اله الا هو" یا "هو الله احد" درباره توحید بود، توی قرآن میومد. ولی مسئله این کلمات نیست. ممکنه این کلمات به صورت کاملا مشرکانه توی ذهنمون باشه. خدا بالاخره جدای از همه چیزه، داخل همه چیزه، ما هستیم خدا هم هست یا ... و قس علی هذا.
+
+راستش صحبت زیاده و در قالب بحث نوشتاری مشکل. ان‌شاءالله بشه حضوری یا آنلاین صحبت کنیم. اگر اجازه بدید من به صرف ۴ نکته کوتاه اکتفا کنم:
+
+۱- با کلید واژه‌هایی مثل "ولایت محمدیه" بیشتر میشه در مورد این بحث مطلب پیدا کرد.
+
+۲- این قرآن هادی بالاخره از دو لب مبارک حضرت محمد (ص) بیرون اومده. چند آیه در قرآن میتونه شفاف‌تر از این در هم تنیدگی قرآن کریم و محمد (ص) رو نشون بده؟ بعضی‌ وقتا چیزها از بداهت مغفول واقع میشن، نه از مخفی بودن.
+
+۳- عیسی (ع) همون کتاب خدا رو میخواد تعلیم بده. چیزی غیر از کتاب خدا برای تعلیم وجود نداره. ولی در عین حال باید عیسی (ع) رو طوری بفهمیم که بود و نبودش یک فرق اساسی داشته باشه. به قول خارجیا game changer باشه.
+
+۴- درسته ما هم در مورد قرآن فکر میکنیم. ولی خیلی راحت نیست مفسرینی مثل علامه طباطبایی، آقای قاضی، ملاصدرا، ابن عربی، سعدی، حافظ، مولوی و ... رو با یک کلمه غالی بذاریم تو بایگانی. شاید اونا هم چیزی میفهمیدن 😊 اونا هم همین قرآن رو میخوندن و اون حرفا رو میزدن.
+
+ممنون بابت بحث. آرزوی موفقیت دارم براتون</p>
+  </section>
+
+  <section>
+    <h2>ولی ۶</h2>
+    <p>فرض کنید شما زمان پیامبر (ص) بودید. جهت تحقق "ایمان به خداوند و روز آخر و انجام عمل صالح" چطور زندگی میکردید؟ آیا/چقدر بودن و نبودن پیامبر (ص) بین مردم فرق داره؟</p>
+  </section>
+
+    <section>
+    <h2>ولی ۷</h2>
+    <p>قبلنا با رفقا که صحبت میکردیم، تعبیری که به ذهن بنده میومد این بود که وقتی کتاب هست، و ولی الهی نیست، ما در واقع خیلی چیز داریم و خیلی چیز هم نداریم. وقتی تورات هست و عیسی مسیح (ع) نیست، خیلی چیز هست و خیلی چیز هم نیست.
+
+با ادبیات جالب آقای دکتر، مثل اینه که مثلا یک نرم‌افزار چند گیگابایتی داریم که سخت‌افزار هیچ کدوممون نمیتونه کامل Runش کنه. یکی ۴ تا بایت از یک قسمتش رو پردازش میکنه، یکی ۷تا بایت از یک قسمت دیگه‌ش رو و یکی خفن‌تره از هر دو همه این ۱۱ تا بایت رو با هم پردازش میکنه و ... .
+
+خلاصه این "کلمه" یک "شجره" مناسبی میخواد.</p>
+  </section>
+
+  <section>
+    <h2>ولی ۸</h2>
+    <p>اگر نصف قرآن نازل نمیشد، فرقی نمیکرد؟ و آیا در اون صورت به عقب برمیگشتیم؟</p>
+  </section>
+
+   <section>
+    <h2>ولی ۹</h2>
+    <p>بنده عرض کردم اگر پیامبر (ص) در این صحنه از دنیا رفته بودن، تقریبا نصف قرآن نازل نشده بود. این اثر داره در هدایت ما یا خیر؟</p>
+  </section>
+
+  <section>
+    <h2>ولی ۱۰</h2>
+    <p>بنده عرض کردم اگر پیامبر (ص) در این صحنه از دنیا رفته بودن، تقریبا نصف قرآن نازل نشده بود. این اثر داره در هدایت ما یا خیر؟</p>
+  </section>
+
+  <section>
+    <h2>ولی ۱۱</h2>
+    <p>آدم فطرت الهی داره. براساس اون هر هدایتی بهش رسید رو میگیره و پیش میره. بالاخره یک نور و آبی پیدا میشه که باهاش رشد کنه. ولی وقتی یک جای پر نور و یک آب زلال هست، خوب شرایط برای رشد خیلی مساعد‌تره.
+
+قرآن رو ببینید درش کتاب نور هست و اون قسمت هدایت که از جنس آدم هست با آب ربط پیدا کرده. و البته اشتباه نشه نور و آب دو تا چیز مستقل نیستن. آب هم از همون نور نشات میگیره و البته مجرای رسوندن نور هم میشه. همونطور که پیامبر (ص) خودشون با قرآن هدایت میشن و اگر یهو هم وسط کار از دست برن، همون نور کامل نمیشه.
+
+اسْتَجِيبُوا لِلَّهِ وَلِلرَّسُولِ إِذَا دَعَاكُمْ لِمَا يُحْيِيكُمْ
+طبق اون تمثیل دوستمون اگر پیش بریم، چه اشکال داره که مثل یک طبیب که دردهای جسمی رو درمان میکنه، یک طبیب هم مشکلات و موانع رشد رو در آدما تشخیص بده و برطرف کنه؟ مثل اون تعبیر آقای دکتر، اون عبد خداوند اون موانع روانی موسی (ع) رو برطرف کنه. یا عیسی مسیح (ع) از روح الهیش بدمه و یک حیات جدیدی به فردی بده. و البته همه این اتفاقات وقتی میفته که اون فرد خودش بره پیش طبیب، موسی (ع) خودش با جدیت بگه لَا أَبْرَحُ حَتَّىٰ أَبْلُغَ مَجْمَعَ الْبَحْرَيْنِ أَوْ أَمْضِيَ حُقُبًا و پیگیری کنه و اینکه عیسی (ع) اون قابلیت زنده شدن رو در اون آدم ببینه.</p>
+  </section>
+
+<section>
+    <h2>ولی ۱۲</h2>
+    <p>اونطوری که من متوجه شدم ما یک سری آدم رشد یافته داریم که هر کدوم ماموریت‌های مختلف دارن. یک سریشون نبی‌ن، یک سری رسولن، یک سری هم مثل اون عبدی هست که موسی (ع) باش همراه میشه یا ذوالقرنین و ...
+
+به طور خاص در مورد نبی، وقتی همه این نباء که قرار بوده منتقل بشه، منتقل شده، دیگه نکته‌ای برای ماموریت نبی جدید نمیمونه. ولی دلیلی نداره بگیم اون عبد سوره کهف هم دیگه کاری نمیکنه. درواقع اونچه که اونجا داریم میبینیم اینه که اون بنده خدا داشت زندگیش رو میکرد و کارای خودش رو انجام میداد، موسی (ع) رفت ۳ تا صحنه از زندگی ایشون رو دید و برگشت. و بعد از اون هم ذوالقرنین داره کار خودش رو میکنه و ...
+
+
+به نظرم یک نکته قابل توجه در مورد سوره کهف اینه که با اینکه سوره‌ای نسبتا طولانی هست و با اینکه قسمت عمده‌ایش به آدم‌های رشد یافته اختصاص داره درش از هیچ پیامبری اسم برده نشده. موسی (ع) هم که ظاهر میشه در جایگاه شاگرد هست.</p>
+  </section>
+
+  <section>
+    <h2>توحید</h2>
+    <p>اجازه بدید با یک تیتر striking شروع کنم 😁😁
+
+*    اصلا چرا شرک مشکل داره؟    *
+
+اشکال شرک در این هست که در واقع خدا رو کوچک میکنه (در ذهن فرد). دو تا مطلق، دو تا بی‌نهایت، دو تا نامحدود یا ... که معنی نداره. پس کسی که به الوهیت دو نفر قائل هست در واقع خدا (هیچ یک از خداینش) رو مطلق، بی‌نهایت، نامحدود یا ... نمیدونه. اشکال شرک در صرف بزرگ کردن کسی یا چیزی نیست. اونجایی که شرک در قالب بزرگ کردن چیزهایی مطرح میشه، چون درواقع اون بزرگ کردن‌ها طوری هست که برای خدا محدودیت درست میکنه. "خدای محدود" 😄😄 یعنی اون بزرگ کردن طوری هست که توی ذهن فرد خدا رو کوچک میکنه.
+
+پس مجددا: اشکال شرک اینه که در واقع خدا رو داره کوچک میکنه. اشکالش این نیست که صرفا کسی یا چیزی رو داره بزرگ میکنه.
+
+چه اشکالی داره تصور کنیم هر یک از قدرتهایی که خدا داره رو بده به یکی از آدما، ملائکه یا ... که با اذن خدا اعمالش کنن؟! فقط باید خداشناسی‌ای داشته باشیم که بفهمیم که وقتی اون داره اون کار رو میکنه، باز هم درواقع خدا داره اون کار رو میکنه. و هیچ جا کار از دست خدا خارج نمیشه، هیچ وقت هیچ حائلی بین خدا و بقیه قرار نمیگیره و خلاصه هیچ جور محدودیتی برای خدا درست نمیشه. من هم وقتی غذا میذارم دهنم، خدا داره غذا میذاره دهنم، مستقیم خودش "هُوَ يُطْعِمُنِي وَيَسْقِينِ".</p>
+  </section>
+
+   <section>
+    <h2>آدم کلمه</h2>
+    <p>همونطور که میبنیم در این ماجرا یک "هم" وجود دارن که خداوند برتری آدم بر ملائکه رو از طریق دانستن اسماء این "هم" نشون میده.
+
+یک سوال عادی که سریع مطرح میشه اینه که این "هم" چی/کی/چیا/کیا هست/هستن؟
+
+بعد از اون، در آیه ۳۷ در مورد توبه خدا به آدم میفرماید
+
+تَلَقَّىٰ آدَمُ مِن رَّبِّهِ كَلِمَاتٍ
+
+و در جای دیگر میفرماید "الْمَسِيحُ عِيسَى ابْنُ مَرْيَمَ رَسُولُ اللَّهِ وَكَلِمَتُهُ أَلْقَاهَا إِلَىٰ مَرْيَمَ". اگر توی این جمله مریم رو بذاریم فاعل و مثل عبارت بالا بنویسیم میشه:
+
+تَلَقَّت مَریَمُ مِن رَبِّها كَلِمَتَه المسیح عیسی بن مریم رسول الله
+
+
+و جای دیگه میبینیم که ملائکه میگن اون کلمه‌ای که خداوند قراره بت بده "اسمش" مسیح عیسی بن مریم هست: "إِذْ قَالَتِ الْمَلَائِكَةُ يَا مَرْيَمُ إِنَّ اللَّهَ يُبَشِّرُكِ بِكَلِمَةٍ مِّنْهُ اسْمُهُ الْمَسِيحُ عِيسَى ابْنُ مَرْيَمَ وَجِيهًا فِي الدُّنْيَا وَالْآخِرَةِ وَمِنَ الْمُقَرَّبِينَ"
+
+
+‐-------------------------
+و نهایتا "وَيُحِقُّ اللَّهُ الْحَقَّ بِكَلِمَاتِهِ وَلَوْ كَرِهَ الْمُجْرِمُونَ"، خداوند حق رو با کلماتش محقق میکنه.</p>
+  </section>
+
+
 </body>
 </html>
