--- a/index.html
+++ b/index.html
@@ -623,6 +623,106 @@
 چه اشکالی داره تصور کنیم هر یک از قدرتهایی که خدا داره رو بده به یکی از آدما، ملائکه یا ... که با اذن خدا اعمالش کنن؟! فقط باید خداشناسی‌ای داشته باشیم که بفهمیم که وقتی اون داره اون کار رو میکنه، باز هم درواقع خدا داره اون کار رو میکنه. و هیچ جا کار از دست خدا خارج نمیشه، هیچ وقت هیچ حائلی بین خدا و بقیه قرار نمیگیره و خلاصه هیچ جور محدودیتی برای خدا درست نمیشه. من هم وقتی غذا میذارم دهنم، خدا داره غذا میذاره دهنم، مستقیم خودش "هُوَ يُطْعِمُنِي وَيَسْقِينِ".</p>
   </section>
 
+ <section>
+    <h2>ولی ۱۳</h2>
+    <p>راستش استفاده‌تون از آیه رو متوجه نشدم ولی صحبتتون رو قبول دارم. کلا هر گناهی از شرک میاد و اصلا گناهی غیر از شرک نداریم. کل ماجرای دین‌داری موحد شدن هست.
+    
+    اگر منظورتون از دروغ بستن به خدا یه همچین چیزیه که مثلا هر گزاره‌ای رو با سرچ الفاظ باید در قرآن پیدا کنیم وگرنه دروغ بستن به خداوند هست، خوب این که درست نیست. تو خود قرآن هم میفرماید:
+
+وَلَوْ أَنَّمَا فِي الْأَرْضِ مِن شَجَرَةٍ أَقْلَامٌ وَالْبَحْرُ يَمُدُّهُ مِن بَعْدِهِ سَبْعَةُ أَبْحُرٍ مَّا نَفِدَتْ كَلِمَاتُ اللَّهِ ۗ إِنَّ اللَّهَ عَزِيزٌ حَكِيمٌ ‎
+
+قرآن یک کتاب "لازم و کافی" برای هدایت هست.
+    </p>
+  </section>
+
+ <section>
+    <h2>ولی ۱۴</h2>
+    <p>من حد علم و قدرت و ... اولیای الهی رو نمیدونم. ولی میدونم هرقدر خدا بخواد میتونه بهشون علم بده، میتونه نده، میتونه علمی رو بده بعد بگیره جوری که انگار اصلا نبوده و ...
+
+خلاصه لازم نیست تا کسی یک مقام عالیه‌ای رو برای کسی مطرح کرد سریع یاد شرک بیفتیم. ببینیم خود قرآن چطور تذکرهایی به مسیحی‌ها میده. تذکر میده که  "نگید" مسیح خدا بود، "نگید" پسر خدا بود، "نگید" ثلاثه و ... کجا گفته صرف اینکه فلان مقام و توانایی رو به مسیح (ع) نسبت بدید شرکه؟!
+
+
+چرا خیلی باید عجیب باشه که کسی فکر کنه، با همین تصور سطحی از قیامت، که خدا اول ابراهیم (ع) رو بلند کنه بعد بهش بگه با همون روشی که یادت دادم پرنده‌های مرده رو زنده کردی، بقیه رو صدا کن تا زنده بشن بیان. این چه شرکی توش داره؟! حالا کسی ممکنه بگه نه، اینطوری نیست مکانیزمش، یه جور دیگه‌س. ولی در هر صورت لازمه اون حرف که ابراهیم (ع) ملت رو زنده میکنه، شرک نیست. یا ذوالقرنین رو بلند کنه بگه تو که انقدر تشخیصت منطبق بر حقیقت بود که بت میگفتیم با این اقوام هرکاری میخوای بکن، حالا هم پاشو پرونده این‌ها رو بررسی کن. باز ممکنه کسی بگه، اینطور نیست و فلان طور هست. ولی اون حرفا لازمه‌ش شرک نیست.
+
+کمااینکه در طرف مقابل، فرد میتونه، یک خدای جدای از اشیائی رو تصور کنه که انگار اشیاء در مقابل اون وجود دارن! خوب این هم شرکه. این هم محدود کردن خداست. بعضی وقت‌ها این overreactionها به نام جلوگیری از شرک، باعث میشه دچار شرک دیگه‌ای بشیم.
+
+و البته میدونیم که 
+وَمَا يُؤْمِنُ أَكْثَرُهُم بِاللَّهِ إِلَّا وَهُم مُّشْرِكُونَ
+
+و هدف همه زندگی هم اینه که موحد و موحدتر بشیم.
+
+پ.ن.: اینم تاکید کنم که همه در حد خودشون ولایت دارن. و با عبدتر شدن، با نزیکتر شدن به خدا، ولایتشون هم بیشتر میشه.
+    </p>
+  </section>
+
+  <section>
+    <h2>هو و الله</h2>
+    <p>راستش یه ربط کلی به ذهنم میاد ولی چیز خیلی مشخصی در مورد منظورتون نمیدونم🙏 اگر در رابطه با اون سوالتون در مورد استفاده خداوند از ضمیر مفرد و جمع برای خودش منظورتون هست. من در حد سواد خودم (که بسیار کم و غیرقابل اعتماد هست)، یه همچین چیزایی میدونم که گویا ما در فهم خودمون از خدا یک ذات داریم که در قرآن با "هو" ازش یاد میشه و یک اسماء و صفات که با "الله" ازش یاد میشه. حالا اونجاهایی که خدا با ضمیر مفرد صحبت میکنه، این بیشتر متناسب هست با اون  "هو"، وقتی با ضمیر جمع صحبت میکنه، بیشتر متناسب هست با "الله". خلاصه وقتی خدا ضمیر مفرد به کار میبره، خیلی بحث رو شخصی کرده 😊 انّی جاعل، روحی، جنّتی و ...
+
+اگر علاقه‌مند هستید به نظرم با کلید واژه‌هایی مثل : وحدت شخصی و وحدت صفاتی و ... میتونید یه سرنخ‌هایی پیدا کنید.
+
+اگر چیزای خوبی دستگیرتون شد، ما رو هم بی‌بهره نذارید 🙏 </p>
+  </section>
+
+
+   <section>
+    <h2>تورات و عیسی</h2>
+    <p>به نظر بنده، اگر اون چیزی که در حضرت عیسی (ع) برامون چشم‌گیر هست اینه که ایشون "خیلی کم واسطه" به این عالم اومدن، و دنبال کتابی متناظر با ایشون میگردیم، اون کتاب تورات هست که "خیلی کم واسطه" به این عالم اومد.
+
+اگر دنبال متناظری بین آدم‌ها برای قرآن هستیم، باید توی آدم‌هایی بگردیم که ظاهر خیلی عادی‌تری نسبت به عیسی (ع) دارن.
+
+
+کلا اون موجودی که همه اسماء رو یاد میگیره، موجودی هست که در زمین قرار میگیره. اون کسی که تا اوج بالا میره، از پایین شروع میکنه. از پایین پایین تا بالای بالا رو پوشش میده.</p>
+  </section>
+
+   <section>
+    <h2>فهم و تحریف</h2>
+    <p>متاسفانه در مواجهه با قرآن بعضی جاها ما (امثال خودم رو عرض میکنم) کلمات رو تحریف میکنیم و میاریمش توی فضای فهمی که برای خودمون مانوس هست. همواره باید سعی کنیم که به جای اینکه کلمات رو تحریف کنیم، فهممون رو گسترش بدیم که کلمه رو همون که هست بفهمیم. به نظر میاد این پروژه فهم قرآن در زندگی هست؛ که فهممون رو بزرگ و بزرگتر کنیم و هی قرآن رو بیشتر و بیشتر اونطوری که هست بفهمیم، نه اینکه ما خیلی تغییر نکنیم و هی قرآن رو بیاریم توی فضای فهم خودمون.
+
+من به عنوان یک مثال خوب برای وقوع چنین تحریفاتی، معمولا این قسمت از مکالمه حضرت ابراهیم (ع) با بت‌پرستان رو مثال میزنم:
+
+قَالَ أَتَعْبُدُونَ مَا تَنْحِتُونَ - وَاللَّهُ خَلَقَكُمْ وَمَا تَعْمَلُونَ
+
+شاید خیلیا تند تند که میخونیم، این عبارت رو توی ذهن خودمون درواقع این میخونیم
+
+قَالَ أَتَعْبُدُونَ مَا تَنْحِتُونَ ‎- وَاللَّهُ خَلَقَكُمْ وَمَا تنحتون
+
+در صورتی که اون آیه دوم عبارت خالص و فهم‌گستری در توحید افعالی هست: خداوند شما و آنچه انجام میدهید را آفریده است.
+
+قرآن پر است از این عبارات عجیب (برای فهم اولیه امثال بنده)، که شاید خیلی وقت‌ها چون درست در منظومه فکریمون قرار نمیگیره، ردش میکنیم میریم و در واقع تحریفش میکنیم به یک عبارت دیگه و میاریمش توی فضای مانوس برای خودمون.
+
+وَمَا رَمَيْتَ إِذْ رَمَيْتَ وَلَٰكِنَّ اللَّهَ رَمَىٰ
+هُوَ يُطْعِمُنِي وَيَسْقِينِ
+هُوَ الْأَوَّلُ وَالْآخِرُ وَالظَّاهِرُ وَالْبَاطِنُ
+أَنَّ اللَّهَ يَحُولُ بَيْنَ الْمَرْءِ وَقَلْبِهِ
+نَحْنُ أَقْرَبُ إِلَيْهِ مِنْ حَبْلِ الْوَرِيدِ
+استفاده خاص و عجیب از ضمایر در آیه ۲ سوره نحل
+آیه ۹۱ سوره نمل که اولش قل نداره
+آمِنُوا بِاللَّهِ وَرَسُولِهِ
+مَا أَصَابَ مِن مُّصِيبَةٍ فِي الْأَرْضِ وَلَا فِي أَنفُسِكُمْ إِلَّا فِي كِتَابٍ مِّن قَبْلِ أَن نَّبْرَأَهَا
+و ...
+
+و اصلا شاید این‌ها نمونه‌هایی از همون "بینات من الهدی"هایی هستن که میفرماید قرآن ۱-هُدًى لِّلنَّاسِ وَ۲-بَيِّنَاتٍ مِّنَ الْهُدَىٰ وَ۳-الْفُرْقَانِ. نشانه‌هایی به تعالیم بسیار بسیار سطح بالا. و البته با لطافت و ظرافت در قالبی ساده که ما آدمای معمولی هم یهو زده نشیم، یه معنای خوبی که برامون قابل قبول هست ازش برداشت کنیم و پیش بریم. و کم‌کم با انس بیشتر با قرآن، فهممون رو هم رشد میده و همون عبارات رو بیشتر و بیشتر همونطور که هست میفهمیم و جلو میریم. و کلا در فرآیند فهم، تدبر، تفسیر، تاویل و ... به نظر میاد قراره ما از برداشت کنونی خودمون حرکت کنیم به سمت اونچه که واقعا قرآن هست.
+
+البته اینجا صرفا لیستی از آیاتی که تا حالا فهمیدم یک نکته عجیبی دارن (ولو اینکه هنوز نفهمیدم یعنی چی) نوشتم، احتمالا خیلی آیات دیگه هست که تا حالا اصلا نفهمیدم نکته عجیبی دارن 😅🥲
+
+</p>
+  </section>
+
+  <section>
+    <h2>ایوب و صبر</h2>
+    <p>در امتداد این صحبتتون چه بسا بگیم شاید داستان ایوب (ع) در قرآن بیان شده برای کسایی که در هدایتشون نیاز دارن سریع ببینن که یک "آخر" خوشی هست. مثل مقطعی در کودکی که برای تشویقش به درس خوندن و علم آموختن، باید نشونش بدی که فلانی درس خوند پولدار شد، مشهور شد یا ... . و در همین راستا چه بسا بگیم مصادیق اصلی‌تر از ایوب (ع) برای صبر، اونایی هستن که در بلایای ایوبی فرو رفتن و فرو رفتن و فرو رفتن و صابر و شاکر بودن تا آخر که زمان تمام شد و فوت شدن.
+
+چه بسا بگیم چون قرآن هدفش اینه که مسلمان‌ها رو از فضای جایزه و جبران‌های دم‌دستی خارج کنه و منتقلشون کنه به دست‌آوردهای اخروی، داستان ایوب رو بسیار کوتاه بیان کرده. (شاید بتونیم علی‌الحساب ۲تا فایده هم برای اون بیان کوتاه بگیم: یکی اینکه به ملت نشون بده که "ما اگر/هروقت بخوایم "قدرتش رو داریم" براتون درستش کنیم و بهتر از قبلش کنیم" و دوم هم تصحیح اون داستان بایبل هست).
+
+این هماهنگ هست با اینکه دکتر اشاره کردن که یکی از راهنمایی‌های خیلی ابتدای قرآن برای مومنین اینه که "وَلَا تَقُولُوا لِمَن يُقْتَلُ فِي سَبِيلِ اللَّهِ أَمْوَاتٌ ۚ بَلْ أَحْيَاءٌ وَلَٰكِن لَّا تَشْعُرُونَ" یعنی اگر در مسیر صبرتون از دنیا رفتید هم چیزی از دست ندادید و بلکه برای خودتون بهتر هم هست. و آیات متعدد دیگه با این مضمون در قرآن.
+
+و هماهنگ هست با اینکه وقتی در همون ابتدای قرآن به مومنین دستور میده که "اسْتَعِينُوا بِالصَّبْرِ وَالصَّلَاةِ" بعدش میفرمیاد "إِنَّ اللَّهَ مَعَ الصَّابِرِينَ" (در مقایسه با اینکه وقتی به بنی‌اسرائیل دستور میده که "اسْتَعِينُوا بِالصَّبْرِ وَالصَّلَاةِ" بعدش میفرماید "إِنَّهَا لَكَبِيرَةٌ إِلَّا عَلَى الْخَاشِعِينَ").
+
+خلاصه به نظر میاد مومنین قراره یادبگیرن که خیلی آخرت‌محور زندگی کنن و در نتیجه یکی از دست‌مایه‌های اصلی که نیاز دارن "صبر" هست. و یکی از چیزهایی که در زندگیشون مفصل دیده میشه "صبر" هست. و خیلی نباید اون داستانی که همینجا سریع آخرش خوب شد، براشون تکرار بشه، در حد همون ۶ آیه کافیه.</p>
+  </section>
+
+
    <section>
     <h2>آدم کلمه</h2>
     <p>همونطور که میبنیم در این ماجرا یک "هم" وجود دارن که خداوند برتری آدم بر ملائکه رو از طریق دانستن اسماء این "هم" نشون میده.
@@ -643,6 +743,81 @@
 
 ‐-------------------------
 و نهایتا "وَيُحِقُّ اللَّهُ الْحَقَّ بِكَلِمَاتِهِ وَلَوْ كَرِهَ الْمُجْرِمُونَ"، خداوند حق رو با کلماتش محقق میکنه.</p>
+  </section>
+
+  <section>
+    <h2>والد و اب</h2>
+    <p>یکی از مطالبی که بنده در سخنرانی‌های آقای دکتر و صحبت‌های اعضای گروه تا حالا خیلی استفاده کردم، برداشت‌های روانکاوانه از قرآن است. تشکر فراوان 🙏🙏
+
+بنده هیچ سررشته‌ای در این زمینه ندارم ولی حس کردم یک اصطلاحی استفاده می‌شه که ممکنه مخلوط شدن فارسی و عربیش باعث اشتباهاتی بشه. لطفاً اگر درست متوجه نشدم، بفرمایید.
+
+اصطلاح «والد» که گویا به سنت جاری، فرهنگ حاکم و امثال آن اشاره داره.
+
+به نظر میاد «والد» اینجا به عنوان لفظ فارسی داره استفاده می‌شه که البته مشکلی نیست. ولی باید توجه کنیم که در عربی دو تا کلمه هست که ما به «پدر» ترجمه می‌کنیم: «والد» و «أب».
+
+«والد» پدر بیولوژیک هست. هم‌خانواده با تولد و ولادت هست. مثلاً هر جا اون احسان شدید به مادر و پدر مطرح می‌شه، لفظ «والد» استفاده می‌شه:
+
+وَوَصَّيْنَا الإِنسَانَ بِوَالِدَيْهِ إِحْسَانًا  
+و انسان را سفارش کردیم که به پدر و مادرش نیکی کند  
+
+و جمع هم بسته نمی‌شه.
+
+اما «أب» علاوه بر پدر، به سرپرست، نسل قبل، و... هم گفته می‌شه. جمع هم بسته می‌شه. مثلاً فرزندان یعقوب می‌گن:
+
+نَعْبُدُ إِلَـٰهَكَ وَإِلَـٰهَ آبَآئِكَ إِبْرَاهِيمَ وَإِسْمَاعِيلَ وَإِسْحَاقَ  
+ما خدای تو و خدای پدرانت، ابراهیم و اسماعیل و اسحاق را می‌پرستیم
+
+که پدربزرگ و عمو رو هم در آباء قرار میدن.
+
+یا کافران میگن:
+
+ قَالُوا بَلْ نَتَّبِعُ مَا أَلْفَيْنَا عَلَيْهِ آبَاءَنَا 
+
+و خیلی آیات دیگه که کافران به اعتقاد آباءشون ارجاع میدن که خیلی هماهنگ هست با همین فرهنگ و سنت جاری که در اون اصلاح روانکاوانه بهش اشاره میشه. پس به نظرم میاد که اون اصطلاح روانکاوانه بهتر هست در عربی به «أب» یا «آباء» ترجمه بشه.
+
+گرچه «والد» و «أب» معمولاً یکی هستن ولی همیشه این‌طور نیست. مثلاً در مورد حضرت ابراهیم (ع) به نظر میاد که ایشون «أب» و «والد»شون تفاوت داشته. ما چهار تا مطلب داریم در مورد استغفار ابراهیم (ع):
+
+۱- آخر اون مکالمه (اول) با «أب»ش، می‌فرمایند:
+
+سَأَسْتَغْفِرُ لَكَ رَبِّي  
+به‌زودی از پروردگارم برایت آمرزش می‌طلبم  
+
+۲- در یک مکالمه که به نظر میاد بعد از مکالمه‌ی قبلی هست، با «أب» و قومش، رو به خداوند عرضه میدارد:
+
+اغْفِرْ لِأَبِي إِنَّهُ كَانَ مِنَ الضَّالِّينَ  
+پدرم را بیامرز که او از گمراهان بود  
+
+خب این صحنه‌ها دوران شروع قیام ابراهیم (ع) هست.
+
+۳- در سوره توبه داریم:
+
+مَا كَانَ لِلنَّبِيِّ وَالَّذِينَ آمَنُوا أَن يَسْتَغْفِرُوا لِلْمُشْرِكِينَ وَلَوْ كَانُوا أُولِي قُرْبَىٰ مِن بَعْدِ مَا تَبَيَّنَ لَهُمْ أَنَّهُمْ أَصْحَابُ الْجَحِيمِ ‎﴿١١٣﴾‏ وَمَا كَانَ اسْتِغْفَارُ إِبْرَاهِيمَ لِأَبِيهِ إِلَّا عَن مَّوْعِدَةٍ وَعَدَهَا إِيَّاهُ فَلَمَّا تَبَيَّنَ لَهُ أَنَّهُ عَدُوٌّ لِّلَّهِ تَبَرَّأَ مِنْهُ ۚ إِنَّ إِبْرَاهِيمَ لَأَوَّاهٌ حَلِيمٌ
+برای پیامبر و کسانی که ایمان آورده‌اند، سزاوار نیست که برای مشرکان، پس از آن که برایشان آشکار گردید که آنان اهل دوزخند، طلب آمرزش کنند، هر چند خویشاوند آنان باشند. (۱۱۳) و آمرزش‌خواهی ابراهیم برای "پدرش"، فقط به خاطر وعده‌ای بود که به او داده بود، پس هنگامی که برایش روشن شد، او دشمن خداست، از او بیزاری جست. همانا ابراهیم، اهل آه و ناله و بردبار بود. 
+
+۴- بعدها در کهنسالی که اسحاق (ع) هم به دنیا اومده، ما این دعا رو از ابراهیم (ع) می‌شنویم:
+
+رَبَّنَا اغْفِرْ لِي وَلِوَالِدَيَّ وَلِلْمُؤْمِنِينَ يَوْمَ يَقُومُ الْحِسَابُ  
+پروردگارا! مرا و پدر و مادرم و مؤمنان را در روزی که حساب برپا می‌شود بیامرز  
+
+به نظر میاد حالت با پیچیدگی کمتر اینه که بگیم طبق آیه قسمت ۳، ابراهیم (ع) دیگه در کهنسالی برای «أب»ش استغفار نکرده. پس اون "والد" که ابراهیم (ع) در آیه قسمت ۴ براش استغفار میکنه، متفاوت از اون "اب" بت‌پرستش هست. پس در مورد حضرت ابراهیم (ع)، «والد» و «أب» دو نفر متفاوت هستن. 
+
+چند حالت دیگه هم میتونه باشه که البته عجیب و غریب هست: یکی اینکه بگیم ابراهیم (ع) در کهنسالی حتی پس از به دنیا اومدن اسحاق (ع) تازه براشون روشن بشه که "پدرش" "عدو لله" بوده و ازش برائت بجوید. پس اون دعای ابراهیم (ع) برای "پدرش" قبل از این بوده که این مطلب براش روشن بشه. یکی دیگه اینکه بگیم با اینکه حضرت ابراهیم (ع) از پدرشون برائت جسته بودن، به خاطر وعده‌ای که بهشون داده بودن باز هم براشون استغفار میکردن! و دیگری اینکه بگیم پدر ابراهیم ابتدا بت‌پرست بوده و بعد ایمان آورده و دعای دوران کهنسالی برای پدر مومن شده بوده (که عجیبیش اینه که بنده چنین چیزی تا حالا جایی نشنیدم).
+
+چند تا دلیل شاید کمرنگ‌تر هم برای تفاوت "اب" و "والد" حضرت ابراهیم (ع) میشه بیان کرد.
+
+۱- در سوره انبیاء، حضرت ابراهیم (ع) به جمعی که به نظر میاد "اب"شون هم توشون هست میفرماید: "أُفٍّ لَّكُمْ وَلِمَا تَعْبُدُونَ مِن دُونِ اللَّهِ" در صورتی که طبق قرآن میدونیم که به "والد" نباید حتی "اف" بگیم "وَقَضَىٰ رَبُّكَ أَلَّا تَعْبُدُوا إِلَّا إِيَّاهُ وَبِالْوَالِدَيْنِ إِحْسَانًا ۚ إِمَّا يَبْلُغَنَّ عِندَكَ الْكِبَرَ أَحَدُهُمَا أَوْ كِلَاهُمَا فَلَا تَقُل لَّهُمَا أُفٍّ وَلَا تَنْهَرْهُمَا وَقُل لَّهُمَا قَوْلًا كَرِيمًا"
+
+۲- استغفار برای یک بت‌پرست در بین استغفار برای خود و مومنین خیلی هماهنگ نیست. رَبَّنَا اغْفِرْ لِي وَلِوَالِدَيَّ وَلِلْمُؤْمِنِينَ يَوْمَ يَقُومُ الْحِسَابُ  
+
+۳- داریم "إِذْ قَالَ إِبْرَاهِيمُ لِأَبِيهِ آزَرَ" و اسم "اب" حضرت ابراهیم (ع) اومده: آزر. پس یک منظوری بوده از بیان این اسم "آزر"، چون خیلی شخصیت‌های جدی‌تر در عبارات قرآن بدون اسم ذکر میشن. تنها چیزی که تا حالا به ذهن بنده رسیده اینه که این برای متمایز کردن این فرد از "تارخ" هست که به عنوان پدر بیولوژیک، "والد"، حضرت ابراهیم (ع) مطرح هست.
+
+پ.ن.۱: اگر صحبت‌های بالا درست باشه، میشه گفت شاید بیان اسم "آزر" در قرآن برای تصحیح خلطی هست که در بایبل رخ داده که تارخ و آزر یکی شده و بعد تارخ به عنوان بت‌پرست شناخته شده.
+
+پ.ن.۲: درسته که اون تاکیدهای شدید بر احسان برای "والد"، ذکر شده ولی حضرت ابراهیم (ع) با "اب"شون هم خیلی محبت‌آمیز صحبت میکردن. تکرار لفظ محبت آمیز "یا ابت" در سوره مریم این نحوه رفتار رو نشون میده. و یک حدس کاملا من‌درآوردی هم بنده دارم از دلیل اینکه خداوند به حضرت موسی (ع) وقتی میخوان بفرستنش سراغ فرعون میفرماید "فَقُولَا لَهُ قَوْلًا لَّيِّنًا". شاید چون در هر صورت فرعون مدتی نقش سرپرست حضرت موسی (ع) رو داشته.
+
+پ.ن.۳: در فارسی یک لفظ دیگه رو هم ما خیلی وقت‌ها به‌جای پدر به کار می‌بریم، و اون «ولی» هست. مثلاً تو مدرسه به بچه می‌گن «ولی‌ت» رو بیار، یا «انجمن اولیاء و مربیان» که اکثراً برداشت هم پدر و مادر هست. در صورتی که مجدداً در عربی، «ولی» نقش کلی‌تری هست که گاهی پدر در اون نقش قرار می‌گیره. صرفاً یک حدس دارم، تحقیق مفصلی نکردم، ولی شاید در مسیحیت هم همین لغت «ولی» بوده که به «پدر» و «پسر» ترجمه شده، و اگر همه‌ی اون «پدر» و «پسر»ها رو با «ولی» جایگزین کنیم، عبارات درست بشه. توجه: لفظ «ولی» برای هر دو طرف رابطه استفاده می‌شه. هم می‌گیم: اللَّهُ وَلِيُّ الْمُؤْمِنِينَ، هم می‌گیم: إِنَّ أَوْلِيَاءَ اللَّهِ لَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُونَ . هم گفته میشه آدمای خوب «ولیِ» خداوند هستند، و هم گفته میشه که خداوند «ولیِ» آدمای خوب هست.
+
+</p>
   </section>
 
 
