--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section>
     <h2>سوره ق</h2>
     <p>
-      سوره ق، آیات ۹ تا ۱۱، ۱۲ تا ۱۴، ۲۴ تا ۲۶ (و شاید آیات دیگر) دارای الگویی هستند که با حرف «ق» شروع می‌شود، دوری می‌زند و به نقطهٔ آغازین خود برمی‌گردد.
+      سوره ق، آیات ۹ تا ۱۱، ۱۲ تا ۱۴، ۲۴ تا ۲۶ (و شاید آیات دیگر) دارای الگویی هستند شبیه حرف «ق»، می‌رود و دور می‌زند و به نقطهٔ آغازین خود برمی‌گردد.
 کل سوره ق هم مثل حرف ق یک دور می‌زند. آیات انتهایی به آیات ابتدایی برمی‌گردد.
 ذَٰلِكَ رَجْعٌ بَعِيدٌ شاید اشاره ای به همان ساختار حلقوی دارد.
 </p>
