--- a/index.html
+++ b/index.html
@@ -806,6 +806,81 @@
 </p>
   </section>
 
+    <section>
+    <h2>صلات در قرآن</h2>
+    <p>
+      مهمترین، پرتکرارترین، جدی‌ترین و ... حکم شریعت در قرآن صلات (نماز) هست.
+<br>
+حالا کسی که قرآن رو میخونه، پا میشه با یک جزئیات خیلی مشخصی وضو میگیره یا تیمم میکنه (دستور وضو و تیمم با جزئیات در قرآن هست، سوره مائده آیه ۶)، و بعدش ..................‌.....‌‌‌‌‌‌‌........
+<br>
+چی کار باید بکنه؟ یک وضوی با جزئیات خیلی مشخص گرفته، برای چیزی که فرمش تو قرآن بسیار نامشخص هست؟!!!
+<br>
+اگر بگیم خوب شاید این نشونه اینه که واقعا فرم خاصی منظور نیست، به نظرم جواب قابل قبولی نیست، چون یک وضوی با جزئیات برای یک کاری که فرم خاصی نداره؟!! 
+<br>
+اگر بگیم پیامبر (ص) جلوی مردم انجام میدادن، لازم نبوده بنویسن، پیامبر (ص) روزه و حج و ... رو هم انجام دادن ولی جزئیات زیادی ازش رو توی قرآن نوشتن.
+<br>
+ما اینجا با پدیده‌ای مواجهیم که:
+<br>
+۱- مهمترین قسمت شریعت هست
+      <br>
+۲- جزئیات مشخص داره
+      <br>
+۳- در کتاب (مصحف) بسیار مبهم بیان شده
+      <br>
+
+به نظرم این خیلی روشن داره اشاره میکنه که باید دنبال دستور صلات خارج از کتاب (مصحف) بگردید. و چون مهمترین قسمت شریعت هم هست، اهمیت اون قسمت هدایت خارج از کتاب (مصحف) رو نشون میده.
+<br>
+و حالا یک چیز دیگه هم اضافه کنم، اینکه به نظر میاد که صلات کلا چیزی نیست که بشه نوشتش. یعنی این صرف یک کار نمایشی نیست که یک چیزی که میشد بنویسن رو ننویسن و بگن برو از اون یکی بپرس. بعد ملت برن از اون یکی بپرسن و بنویسنش. و تمام!
+<br>
+من تا حالا روایتی رو استفاده نکردم، ولی اینجا چون خود کتاب (مصحف) یک اشاره مستقیم به رجوع به بیرون خودش داره، اجازه بدید یک روایت بگم. اون طور که من دیدم گویا مشهور‌ترین روایت در مورد اینکه ملت از پیامبر (ص) پرسیدن که چطور نماز بخونیم، اینه که ایشون فرمودن "صلّوا کما اُصلّی" (نماز بخوانید اونطور که من نماز میخوانم). و به نظر بنده این دستور همیشگی در مورد صلات هست و این همون چیزی هست که همونطور که میبینید نوشتنی نیست. درواقع باید همواره اون قسمت خارج از کتاب (مصحف) رو پیدا کرد و همونطور که او نماز میخونه نماز خوند.
+<br>
+(اشتباه نشه. من خودمم به همین روش معمول نماز میخونم 😁😁😁 ولی به نظرم باید حواسمون باشه که دستور نماز همون "صلّوا کما اُصلّی" هست).
+<br>
+به نظرم در مورد ماجرای صلات در اسلام به قول خارجی‌ها باید بگیم:
+<br>
+There's an elephant in the room ;)
+    </p>
+  </section>
+
+ <section>
+  <h2>آدم و شجره و امانت</h2>
+  <p>
+  «سوئیچ لامبورگینی رو بر ندارید مبادا بزنیدش به دیوار»
+<br>
+در این جمله نهی اصلی، نهی از برداشتن سوئیچ نیست، نهی از زدن لامبورگینی به دیوار است. دلیل بیان این جمله این است که اگر سوئیچ رو بردارید احتمالش خیلی زیاد است که ماشین رو بزنید به دیوار. این ماشین سرعتش زیاده، کنترلش سخته، ضمنا گرون قیمت هم هست. نه اینکه برداشتن کلید معادل زدن ماشین به دیوار باشد و خودش به خودی‌خود خطا محسوب بشه. نه برداشتن کلید بده، نه سوار شدن، نه راه انداختن ماشین؛ اونچه که بده زدن ماشین به دیوار هست.
+<br>
+حالا جی‌پی‌تی‌ این جمله بالا رو خطاب به ۲ نفر به عربی ترجمه کن.
+<br>
+جی‌پی‌تی: لا تأخذا مفتاح اللامبورغيني، فتصدمَاها بالجدار.
+<br>
+حالا جی‌پی‌تی این جمله رو به عربی ترجمه کن، خطاب به ۲ نفر: این کار را نکنید مبادا از ظالمین بشوید.
+<br>
+جی‌پی‌تی: لا تفعلا هذا فتكونا من الظالمين
+<br>
+<br>
+مقایسه کنید با "لَا تَقْرَبَا هَٰذِهِ الشَّجَرَةَ فَتَكُونَا مِنَ الظَّالِمِينَ".
+<br>
+پس اینجا هم میتونیم بگیم نهی اصلی نزدیک شدن به اون درخت نیست، نهی اصلی ظالم شدن هست. در اثر نزدیک شدن به اون درخت یا خوردن از اون، توی شرایطی قرار میگیرید که خیلی احتمالش زیاده نتونید حقش رو ادا کنید و ظالم بشید. و نه اینکه صرف نزدیک شدن به این درخت ظلم باشه. و آدم و حوا هم چه بسا همین رو از اون عبارت فهمیدن: "صرف نزدیک شدن به این درخت خطا نیست ولی بعدش باید خیلی خیلی مواظب باشیم".
+<br>
+حالا اون عذرخواهی و گریه و زاری‌های بعدش چیه؟
+<br>
+اون ۲تا جوان جویای نام (اسماء الهی :) ) لامبورگینی رو برداشتن و افتادن توی خیابونای تهران. دور و برشون ویراژ و سبقت غیرمجاز و راهنما نزدن و ... پر از استرس شدن و زنگ زدن به خونه ابراز ناراحتی و گریه و زاری. حالا از خونه دارن بهشون میگن، عیب نداره، گذشته، حالا اگر به چیزایی که میگیم گوش کنید و گاز و ترمز و اون دکمه‌ها رو اونطور که میگیم استفاده کنید مشکلی پیش نمیاد.
+<br>
+فَإِمَّا يَأْتِيَنَّكُم مِّنِّي هُدًى فَمَن تَبِعَ هُدَايَ فَلَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُونَ
+<br>
+<br>
+پ.ن.۱: توجه بفرمایید که با اینکه خیلی جاها "لَا تَقْرَبَا هَٰذِهِ الشَّجَرَةَ فَتَكُونَا مِنَ الظَّالِمِينَ" رو ترجمه کردن "به این درخت نزدیک نشوید که از ظالمان میشوید"، طبق جی‌پی‌تی "به این درخت نزدیک نشوید مبادا از ظالمان بشوید" هم ترجمه معتبری هست.
+<br>
+پ.ن.۲: چرا انقدر احتیاط میکنه که "لا تقربا" و "ف" استفاده میکنه؟ چون خیلی خیلی خیلی احتمال خطا زیاده. مثلا یک لامبورگینی با موتور صدهزار اسب بخاره. خیلی احتمالش کمه یه آدم عادی بشینه پشتش و نزنه به جایی، ولی بالاخره یک احتمال اپسیلون داره.
+<br>
+پ.ن.۳: در این مثال میشه دیده که آدم با صرف خوردنش از درخت گناهی نکرده، باید دید بعدش چیکار میکنه، از پس کار برمیاد یا نه.
+<br>
+پ.ن.۴: و اینطور میشه اون امانت الهی که قاعدتا چیز بسیار مثبتی هست ولی آسمان و زمین از پذیرشش سر باز زدند رو ربط داد به خوردن از اون درخت. یه موجود ظلوم جهول لازم بود که بپره پشت این ماشین (و همزمان به مقدار خوبی با استعداد که کلا احتمال اینکه درست برونه درش وجود داشته باشه که براساس اون اصلا اجازه بدن دور و بر ماشین بچرخه).
+<br>
+پ.ن.۵: در فارسی هم جمله رو ساده‌تر میگوییم: "سوئیچ لامبورگینی رو بر ندارید مبادا بزنیدش به دیوار" = سوئیچ لامبورگینی رو بر ندارید بزنیدش به دیوار" = "سوئیچ لامبورگینی رو بر ندارید میزنیدش به دیوار"
+  </p>
+</section>
+
 
 </body>
 </html>
