--- a/index.html
+++ b/index.html
@@ -881,6 +881,12 @@ There's an elephant in the room ;)
   </p>
 </section>
 
+ <section>
+  <h2>وظیفه خلیفة الله در ایجاد ساختار اجتماعی برمبنای جنسیت</h2>
+  <a href="Khalifeh-Jensiat.docx">لینک</a>
+
+ </section>
+
 
 </body>
 </html>
