--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@ There's an elephant in the room ;)
 
  <section>
   <h2>وظیفه خلیفة الله در ایجاد ساختار اجتماعی برمبنای جنسیت</h2>
-  <a href="Khalifeh-Jensiat.docx">لینک</a>
+  <a href="Khalifeh-Jensiat.docx">لینک داونلود</a>
 
  </section>
 
