--- a/index.html
+++ b/index.html
@@ -887,6 +887,26 @@ There's an elephant in the room ;)
 
  </section>
 
+  <section>
+  <h2>قلب</h2>
+  <p>
+در قرآن مرکز ادراک آدم قلب هست.
+<br>
+ما به عنوان آدم باید "درست را دوست بداریم" و تبعا "از غلط بدمون بیاد". یعنی ادراک آدم این نیست که صرفا استدلال کنه و گزاره درست رو تصدیق کنه یا غلط رو نفی کنه. این ادراک ماشینی هست. ادراک آدم یعنی "علاقه داشتن به حق/درست" و "تنفر از باطل/غلط".
+<br>
+کسی که قلب سلیم داره اینطور هست. از درست خوشش میاد. از غلط بدش میاد. کسی که قلب مریض داره، با توجه به میزان مرضش، در مواجهه با درست و غلط احساسات قاطی پاطی درش درست میشه. در حالت حدی ممکنه عسل که شفا هست رو بالا بیاره.
+<br>
+ابراهیم (ع) که در قرآن به دارنده قلب سلیم معرفی شده،  وَإِنَّ مِن شِيعَتِهِ لَإِبْرَاهِيمَ ‎﴿٨٣﴾‏ إِذْ جَاءَ رَبَّهُ بِقَلْبٍ سَلِيمٍ ‎﴿٨٤﴾‏ در اون ماجرای محاجه که ستارگان افول میکنن میفرماید: لَا أُحِبُّ الْآفِلِينَ. من افول کنندگان رو دوست ندارم. ما معمولا استدلال میکنیم که "خداوند نمیتواند افول کننده باشد پس این ستاره‌ها خدا نیستند". ولی ابراهیم (ع) میفرماید این را دوست ندارم، پس خدا نیست. ابراهیم (ع) که قلب سالم دارد، ذائقه‌ش درست و غلط رو تشخیص میده.
+<br>
+با سعی کردن برای هماهنگ کردن ذائقه‌مون با درست و غلط، یعنی تمرین اینکه اونچه که میفهمیم درست هست رو سعی کنیم دوست بداریم (تولّی) و اونچه که میفهمیم غلط هست رو سعی کنیم ازش بدمون بیاد (تبرّی) میتونیم مرض قلبمون رو رفع و سالم و سالم ترش کنیم. قرآن منبع مشخص کننده درست و غلطهاست و وَشِفَاءٌ لِّمَا فِي الصُّدُورِ
+<br>
+پ.ن.: بنده چند روز پیش پستی در مورد جایگاه قلب در تمییز آدم از ماشین توی لینکد‌این گذاشتم. اونجا فضای برای اینجور توضیحات نبود. گفتم اینجا تفصیلش رو مکتوب کنم.
+
+  </p>
+
+
+ </section>
+
 
 </body>
 </html>
