--- a/index.html
+++ b/index.html
@@ -903,9 +903,31 @@ There's an elephant in the room ;)
 پ.ن.: بنده چند روز پیش پستی در مورد جایگاه قلب در تمییز آدم از ماشین توی لینکد‌این گذاشتم. اونجا فضای برای اینجور توضیحات نبود. گفتم اینجا تفصیلش رو مکتوب کنم.
 
   </p>
-
-
  </section>
+
+  <section>
+  <h2>Heart</h2>
+  <p>
+
+Will we be replaced by machines?
+<br>
+Machines have computational power and physical movement, but no heart. They generally perform money-maximizing tasks.
+<br>
+When you know about:
+<br>
+- 20,000 kids killed
+    <br>
+- Tens of thousands at the brink of death by starvation, especially newborns
+    <br>
+- Many injured children without any pain-relieving medication—undergoing leg and hand amputations without anesthesia.
+<br>
+…then the amount of feeling you have, and the actions you take to stop this, that are not in the direction of money maximization, is a sign of how difficult it is to replace you by a machine.
+<br>
+Knowing all this, if there are some people who continue living a normal, money-maximizing life, they are already machines—just made of flesh and bone instead of silicon and metal.
+  </p>
+ </section>
+
+  
 
 
 </body>
