--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@ There's an elephant in the room ;)
   </p>
  </section>
 
-  <section>
+  <section style="direction: ltr;">
   <h2>Heart</h2>
   <p>
 
