--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@ There's an elephant in the room ;)
 <br>
 با سعی کردن برای هماهنگ کردن ذائقه‌مون با درست و غلط، یعنی تمرین اینکه اونچه که میفهمیم درست هست رو سعی کنیم دوست بداریم (تولّی) و اونچه که میفهمیم غلط هست رو سعی کنیم ازش بدمون بیاد (تبرّی) میتونیم مرض قلبمون رو رفع و سالم و سالم ترش کنیم. قرآن منبع مشخص کننده درست و غلطهاست و وَشِفَاءٌ لِّمَا فِي الصُّدُورِ
 <br>
-پ.ن.: بنده چند روز پیش پستی در مورد جایگاه قلب در تمییز آدم از ماشین توی لینکد‌این گذاشتم. اونجا فضای برای اینجور توضیحات نبود. گفتم اینجا تفصیلش رو مکتوب کنم.
+پ.ن.: بنده چند روز پیش پستی در مورد جایگاه قلب در تمییز آدم از ماشین توی لینکد‌این گذاشتم. اونجا فضا برای اینجور توضیحات نبود. گفتم اینجا تفصیلش رو مکتوب کنم.
 
   </p>
  </section>
