--- a/index.html
+++ b/index.html
@@ -927,7 +927,33 @@ Knowing all this, if there are some people who continue living a normal, money-m
   </p>
  </section>
 
-  
+   <section>
+  <h2>سوره شوری در قرآن</h2>
+     
+  <p>
+اسم سوره شوری براساس این عبارت معروف داخل سوره در مورد نحوه تصمیم‌گیری بین مومنان میاد: وَأَمْرُهُمْ شُورَىٰ بَيْنَهُمْ (و تصمیماتشان براساس مشورت با یکدیگر است).
+<br>
+سوره شوری، سوره نسبتا کوتاهی هست، حدود ۶ صفحه در رسم الخط معمول. ولی در این سوره بیشترین تکرار ریشه وحی و با فاصله بیشترین چگالی این ریشه بین سوره‌های قرآن رو داریم.
+<br>
+اگر این دو مطلب رو بذاریم کنار هم میشه این نتیجه رو گرفت: جامعه مومنین براساس وحی به صورت شورایی زندگی میکنن. پس مومنین باید تلاش کنن چنین جامعه‌ای تشکیل بدن. 
+<br>
+جامعه شورایی که براساس وحی نیست، توش شورا در واقع تجمع امیال و خواسته‌های نفسانی اعضا هست. خوب چنین حالتی چیزی نیست که خدا از ما بخواد برای تشکیل شدنش بکوشیم. جامعه‌ای هم که توش وحی به صورت زوری در حال تحقق باشه هم هماهنگ نیست با روند رشد آدم‌ها. نهایتا در روند هدایت، آدم‌ها باید خودشون رشد کنن و خداخواهی و دین‌باوری از درون خودشون بجوشه، نه صرف فشارهای خارجی. خداوند یک بار در زمان حضرت سلیمان (ع) نشون داده که اگر بخواد همه رو به زور تحت تسلیم در بیاره، میتونه. ولی میزان پایداری اون شرایط رو دیدیم. و مهمتر از اون یک سری آدم مطیع به زور که قطعا انتهای مطلوبی برای داستان آدم از دید خدا نیست. انتهای مطلوب این هست که همگی به صورت دسته‌جمعی خداپرست و خداخواه بشن و این از درون تک‌تک‌شون بجوشه. (البته همیشه ممکنه یک سری در حال شلنگ و تخته انداختن باشن، مهم این هست که کنترل شده باشه.)
+<br>
+پس مومنین در تلاششون برای تشکیل چنین جامعه‌ای باید ۲ تلاش رو همزمان انجام بدن: ۱- اگر افرادی خواسته‌های خلاف وحی دارن، سعی کنن متقاعدشون کنن و فکر و دلشون رو همراه وحی کنن. ۲- اگر افرادی در راستای وحیانی کردن جامعه راه اجبار در ذهنشون هست، متقاعدشون کنن که باید به صورت شورایی به مطلوبشون برسن. هر دوی این تلاشها باید با هم باشه تا چنین ترکیب " زندگی و تصمیم‌گیری شورایی براساس وحی" محقق بشه. جمهوری (شورا) اسلامی (وحی)، نه یک کلمه کمتر و نه یک کلمه بیشتر.
+<br>
+پ.ن.۱: عبارت معروف قُل لَّا أَسْأَلُكُمْ عَلَيْهِ أَجْرًا إِلَّا الْمَوَدَّةَ فِي الْقُرْبَىٰ هم مال همین سوره هست. یک نکته بسیار جالب توجه این است که این آیه در مکه نازل شده که هنوز نه تنها حکومتی تشکیل نشده بلکه جامعه منسجم مومنین هم هنوز وجود نداره. جزء توصیه‌های خیلی پایه‌ای هست.
+<br>
+پ.ن.۲: بیشترین تعداد تکرار "ولی" و "اولیاء" هم مال همین سوره هست.
+<br>
+پ.ن.۳: روایتی هست از پیامبر (ص) که میفرمایند: «شیّبتنی سورة هود و أخواتها» «سوره هود و سوره‌های همانندش مرا پیر کرد» ـ و یکی از دلایل اصلی که برای این عبارت بیان شده این آیه هست که فَاسْتَقِمْ كَمَا أُمِرْتَ وَمَنْ تَابَ مَعَكَ که پیامبر (ص) را به استقامت کامل امر کرده --که این قطعه قاعدتا چیزی نیست که پیامبر (ص) بابتش بفرمایند پیر شدم-- قسمت سختش استقامت "و کسانی که همراه تو توبه کرده اند" هست. اینکه این عموم رو همراه خودشون در این استقامت کامل بر اوامر الهی نگه دارن. و البته در سوره شوری هم عبارت وَاسْتَقِمْ كَمَا أُمِرْتَ ۖ وَلَا تَتَّبِعْ أَهْوَاءَهُمْ آمده. خداوند خودش ما رو حفظ کنه که جزء کسایی که پیامبر (ص) را پیر کردن نباشیم، بلکه توفیق بده که در راستای تحقق چنین جامعه جهانی پیر بشیم، و بلکه قبل از پیریمون تحقق این آرزوی پیامبر (ص) رو ببینیم 😊
+<br>
+پ.ن.۴: قبل از عبارت وَأَمْرُهُمْ شُورَىٰ بَيْنَهُمْ یک ویژگی که برای مومنین شمرده میشه اینه که وَإِذَا مَا غَضِبُوا هُمْ يَغْفِرُونَ (وقتی عصبانی میشن، گذشت میکنن) و چه بسا بگیم این از لوازم اساسی زندگی شورایی هست.
+<br>
+پ.ن.۵: در ادامه وَأَمْرُهُمْ شُورَىٰ بَيْنَهُمْ ازجمله ویژگی‌های مومنین رو میفرماید: وَالَّذِينَ إِذَا أَصَابَهُمُ الْبَغْيُ هُمْ يَنتَصِرُونَ این عبارت رو وقتی در پرتو عبارت قبل تعبیر کنیم میشه گفت: مومنین که شورایی زندگی میکنن و تصمیم میگیرن، وقتی بهشون تعدّی میشه در قالب یک کل واحد در مقابلش به یکدیگر کمک میکنن.
+<br>
+پ.ن.۶: پس در طرف مقابل، شیطان که دشمن آدم هست، هم سعی میکنم افراد رو از وحی فاصله بده، و هم جامعه رو از فرم شورایی.
+ </p>
+ </section>
 
 
 </body>
