--- a/index.html
+++ b/index.html
@@ -955,6 +955,11 @@ Knowing all this, if there are some people who continue living a normal, money-m
  </p>
  </section>
 
+   <section>
+  <h2>مقایسه موازی داستان فرشتگان و حضرت ابراهم )ع( و حضرت لوط )ع( در سوره‌های ذاریات و حجر و هود</h2>
+  <a href="IbrahimDaif.pptx">لینک داونلود</a>
+ </section>
+
 
 </body>
 </html>
