--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ Knowing all this, if there are some people who continue living a normal, money-m
  </section>
 
    <section>
-  <h2>مقایسه موازی داستان فرشتگان و حضرت ابراهم )ع( و حضرت لوط )ع( در سوره‌های ذاریات و حجر و هود</h2>
+  <h2>مقایسه موازی داستان فرشتگان و حضرت ابراهم (ع) و حضرت لوط (ع) در سوره‌های ذاریات و حجر و هود</h2>
   <a href="IbrahimDaif.pptx">لینک داونلود</a>
  </section>
 
