--- a/index.html
+++ b/index.html
@@ -960,6 +960,75 @@ Knowing all this, if there are some people who continue living a normal, money-m
   <a href="IbrahimDaif.pptx">لینک داونلود</a>
  </section>
 
+  <section>
+  <h2>کاهش اهمیت اقتصادی خانواده</h2>
+    <p>
+     در گذشته خانواده برای اقتصاد انسان‌ها خیلی مفید بلکه لازم بوده. چون کارها عمدتا یدی بوده، مرد از لحاظ اقتصادی (quality of life) ارزش افزوده قابل توجهی برای زن داشته. از طرفی افراد، به طور ویژه مردان، به عنوان بیمه ازکارافتادگی و بیمه بازنشستگی به بچه نیاز داشتن، بالاخص پسر. ولی حتی دختر هم با ازدواجش چنین نقشی رو ایفا میکرده (مثلا "حضرت شعیب (ع)" مسن دخترش رو به ازدواج حضرت موسی (ع) جوان درمیارن به شرطی که چند سال براش کار کنه؛ بیمه بازنشستگی).
+<br>
+هنوز هم در برخی روستاها این ساختار اقتصادی رو میشه دید. پدر باغدار یا کشاورز ساعت ۴ صبح وقت حق‌آبه‌ش هست. وقتی سالمه خودش میره و آب رو باز میکنه. وقتی مریضه یا مسن میشه، پسرانش میرن و ...
+<br>
+تغییر در ۲ ساحت کلی که یه مقدار فیزیکی هستن (لفظ فیزیکی رو در مقابل فرهنگی استفاده میکنم. منظورم اینه چیزی نیست که صرفا در ذهن آدما باشه. در عالم فیزیکی ملموس هست) باعث شده این نیازمندی اقتصادی به ساختار خانواده به شدت کم بشه:
+<br>
+۱- اونی که خیلی فیزیکی هست پیشرفت تکنولوژی هست. تکنولوژی باعث شده از لحاظ اقتصادی (QoL) ارزش افزوده مرد برای زن  به میزان قابل توجهی کمتر بشه. بیل مکانیکی که با چندتا دکمه چندتن بار رو جابه‌جا میکنه فاصله مرد و زن رو خیلی کم کرده و ... . و هر چه تکنولوژی جلوتر میره، ارزش افزوده اقتصادی مرد برای زن کمتر هم میشه. و از طرف دیگه یکی از دلایل حضور بسیار بیشتر زنان در فضای کار نسبت به قدیمها هم پیشرفت تکنولوژی هست که مشاغل بسیار زیادی رو تولید کرده که توی اونها مرد و زن خیلی فرقی ندارن. 
+<br>
+۲- ساختارهای جدید اجتماعی، ساختار اقتصادی شهرهای جدید، به طور خاص بیمه بیماری، از کارافتادگی و بازنشستگی. در ساختار جدید مسئولیت افراد بیمار، ازکارافتاده و بازنشسته بر عهده همه افراد سالم و در‌سن‌ّکار جامعه هست. 
+<br>
+مورد ۱ باعث شده انگیره اقتصادی زنان به مردان کمتر بشه. مورد ۲ باعث شده انگیزه فرزندآوری بالاخص برای مردان (به عنوان نیروهای کار سابق) کم بشه. به طور ویژه این تبدیل فرزند از دارایی و سرمایه (المال و البنون زینه الحیاه الدنیا) در جوامع قدیم، به هزینه در جوامع جدید خیلی واضح هست.
+<br>
+پس: خانواده در جامعه انسان‌های قدیم نقش و ارزش اقتصادی مهمی داشته که در جامعه امروز به دلایل بالا (که ایراد گرفتن به هیچ کدومشون خیلی بدیهی نیست) این نقش به شدت کمرنگ شده.
+<br>
+ارتباطش با بحث شما این هست که قدیما جامعه به دلایل اقتصادی (QoL) برای محافظت از "ساختار خانواده‌محور جامعه" با گسترش بی‌بندوباری مقابله میکرده (چه در اون‌حالت‌های حدی (extreme) که شما گفتی، چه بی‌بند‌باری در پوشش در فضای عمومی جامعه و ...). یعنی اگر جامعه‌ای از ساختار خانواده محافظت نمیکرد حیات فیزیکی جامعه خیلی مستقیم به خطر میفتاد. ولی الآن این ارتباط "حیات فیزیکی جامعه" و "ساختار خانواده‌محور جامعه" خیلی کمرنگ شده. پس اهالی جامعه امروز از بی‌بندوباری چه در فضای مجازی و چه در فضای عمومی معمولی احساس خطر نمیکنن که بخوان کمش کنن و این زمینه گسترش این موضوعات رو بسیار مساعدتر کرده.
+<br>
+توجه بفرمایید که خیلی از این ماجراها در سطح ناخودآگاه هست، مثلا خیلی از افراد شاید هیچ وقت به اینکه وقتی ازکارافتاده شدم چی میشه اصلا فکر نمیکنن، چون در پس‌زمینه ذهنشون این هست که اتوماتیک میره روی بیمه بازنشستگی. یا اینکه وقتی زن و مرد هر دو برای تهیه گوشت میرن از سوپرمارکت میخرن و کسی نمیره گوسفند ذبح کنه، یا مثلا در مقابله با خلافکارها زن و مرد میرن سراغ پلیس و نیروی انتظامی و به ندرت کسی مستقیم درگیر میشه (حتی در اغلب مواقع مجاز نیست)، خوب خیلی چیزی از ارزش افزوده مرد (قدرت بدنی، ویژگی‌ها روانی و ...) برای زن ظهور و بروز پیدا نمیکنه.
+<br>
+خلاصه: پیشرفت تکنولوژی و ساختار اقتصادی جامعه امروز، این گذار از "جامعه خانواده‌محور" به "جامعه فردمحور و تک‌جنسیتی" رو تسهیل کرده.
+<br>
+پی‌نوشت مهم: منظور این نیست که این دو بد هستن. اتفاقا الآن شرایط مساعدتر هست که زن و مرد کمتر بابت فشار نیاز اقتصادی، به طور خالص‌تر جهت بدست آوردن اون تعادل "لاشرقیه و لاغربیه" سوره نور، کنار هم قرار بگیرن (طبق تفسیر دکتر توسرکانی). یا به جای فشار نیاز اقتصادی، بیشتر برای ایجاد آدم‌های متعالی اقدام به بچه‌دار شدن بکنن (شاید بگیم مثل حضرت ابراهیم (ع) و حضرت زکریا (ع)). ولی خوب متاسفانه "ان الانسان لیطغی ان راه استغنی"؛ به خیلی از آدما وقتی حس بی‌نیازی دست میده به جای اینکه اون رو زمینه‌ای قرار بدن برای انجام کارهای نیک با فراغ بال بیشتر، میرن دنبال توسعه امیال نفسانی.
+
+
+ </p>
+ </section>
+
+  <section>
+  <h2>فرم نماز</h2>
+     
+  <p>
+حمد یعنی ستایش بابت اونچه که میشناسیم و تسبیح یعنی ستایش بابت چیزی که نمیشناسیم. حمد یعنی "خدا را سپاس که اینگونه است". تسبیح یعنی "خدا را سپاس که از این هم برتر است، برتری‌ای که من نمیدانم که چیست". 
+<br>
+پس حمد هر موجودی محدود هست به میزان شناختش از خداوند. آدم که همه اسماء رو بلده، موجودی هست که میتونه حمد خالص بکنه. بقیه موجودات که اینطور نیستن، حتما حمدشون با تسبیح همراهه. در قرآن هم میبینیم تنها موجودی که حمد خالص میکنه، آدم هستن (یا فاعل به صراحت مشخص نیست که میشه گفت خود خداوند هست). برای حمد بقیه موجودات همواره عبارتی مثل "نسبح بحمدک" و ... داریم، حمدشون با تسبیح قاطیه.
+<br>
+آدم قائم در حالت کامل خودش ظاهر شده. آدم قائم هست که خلیفه اللهی رو به صورت کامل به منصه ظهور میذاره. این حالت متناسب با حمد هست. ما در قیام نماز حمد میکنیم. و چون آدم همه اسماء الهی رو بلده، در قیام حمدش خالصه.
+<br>
+و البته هرقدر هم معرفت داشته باشیم، حق معرفت خداوند نیست. پس به حالت شکسته در رکوع و سجود میفتیم و تسبیح میکنیم، که خداوندا تو را میستایم که باز هم از آنچه که من دریافته‌ام برتری.
+<br>
+حالت قعود (نشسته) تقریبا هیچگاه حالت مثبتی نیست. در قرآن یا صرفا یک حالت فیزیکی است و خنثی است (وَإِذَا مَسَّ الْإِنسَانَ الضُّرُّ دَعَانَا لِجَنبِهِ أَوْ قَاعِدًا أَوْ قَائِمًا) یا معنی عدم همراهی با پیامبر (ص) را دارد (إِنَّكُمْ رَضِيتُم بِالْقُعُودِ أَوَّلَ مَرَّةٍ فَاقْعُدُوا مَعَ الْخَالِفِينَ). پس وقتی در قعود نماز هستیم تاکید میکنیم که قعود ما آن قعود مخالفت با خدا و رسول نیست، پس میگیم اشهد ان لااله‌الا‌الله و اشهد ان محمد رسول الله.
+<br>
+توجه: تنها دستور مثبت به قعود در قرآن وَاقْعُدُوا لَهُمْ كُلَّ مَرْصَدٍ هست: در هر کمینگاهی به کمین آن‌ها بنشینید. که این هم به وضوح پیش‌زمینه‌ش یک قیام و جهاد هست.
+<br>
+پ.ن.۱: بنده همه آیات حمد و تسبیح و قعود رو نیاوردم. این ریشه‌ها رو جستجو کنید آیات بسیار بیشتری میاد.
+<br>
+پ.ن.۲: آدم قائم هست که خلیفه اللهی رو به صورت کامل به منصه ظهور میذاره. وظیفه خلیفه خداوند جاری کردن خواست خداوند در همه ارکان عالم هست. بالاخص اگر در زمین قرار داده شده، علی الحساب در زمین. آدم قائم هست که سعی در ادای این وظیفه داره.
+<br>
+إِنَّمَا أَعِظُكُم بِوَاحِدَةٍ أَن تَقُومُوا لِلَّهِ مَثْنَىٰ وَفُرَادَىٰ
+<br>
+توجه: خلیفه بودن آدم هم مقامش رو نشون میده (که ملائکه بش سجده میکنن) و هم مسئولیتش رو نشون میده (باید خواسته‌های کسی که خلیفه‌ش هست رو محقق کنه)
+<br>
+پ.ن۳: بالاترین درجه شناخت وقتی هست که آدم حائز اون اسم و صفت بشه. مثلا هیچ کس مثل یک دانشمند فیزیک، نمیدونه دانشمند فیزیک بودن یعنی چه، یا هیچ کس مثل یک کشتی‌گیر نمیدونه کشتی‌گیر بودن یعنی چه و ... و الی الله المصیر (صیرورت (در مقابل سیر و مسیر) به سمت خداوند هست).
+<br>
+پ.ن.۴: کلا ریشه "ق و م" از ریشه‌های بسیار پرتکرار قرآن هست. از خود کلمه قوم بگیریم تا مستقیم تا اقامه تا استقامت تا مقام و ...
+<br>
+پ.ن.۵: هم باید در عرصه فردی قیام کرد "یا ایها المزمل، قم اللیل" و هم در عرصه اجتماعی قیام کرد "یا ایها المدثر، قم فانذر".
+<br>
+توجه: اگر حالت قائم حالت کامل آدم هست، دستور "قم" رو میشه تعبیر کرد به " کامل شو" "در حالت کامل خودت قرار بگیر". فردیش یعنی خودت رو کامل کن، اجتماعیش یعنی جامعه انسان‌ها رو کامل کن.
+<br>
+پ.ن.۶: تقریبا همه مسلمانان، تشهد نماز رو با صلوات بر فقط محمد و آل محمد میگن.
+<br>
+پ.ن.۷: در بین جانوران، تنها جانوری که حالت ایستاده داره، بشر هست. از پایین رفته به بالا. و در تحلیل‌های زیستی هم این فرمش اثر مهمی روی نحوه زندگیش و حتی پیشی گرفتنش از موجودات دیگه داشته.
+<br>
+پ.ن.۸: مهم: فرم نماز ارتباط تنگاتنگی با خود رسول الله (ص) دارد. همونطور که قبلا بحث شد، تقریبا غیرممکنه که به روش‌های عادی کسی فرم نماز رو از قرآن نتیجه بگیره، در حالی که میشه گفت قرآن دلالت داره که نماز یک فرم مشخص داره.
+ </p>
+ </section>
+
 
 </body>
 </html>
